--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/SuperHeroDB?serverTimezone=America/Chicago&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/SuperHeroDBTest?serverTimezone=America/Chicago&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456098765
 
